--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Aventura na Floresta</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <h1>Aventura na Floresta 🌲</h1>
+  <div id="game-container">
+    <div id="player"></div>
+  </div>
 
+  <script src="script.js"></script>
+</body>
+</html>
