--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aventura na Floresta</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Aventura na Floresta 🌲</h1>
+  <p>Pontuação: <span id="score">0</span></p>
   <div id="game-container">
     <div id="player"></div>
+    <div class="obstacle" style="top:100px; left:200px;"></div>
+    <div class="obstacle" style="top:300px; left:500px;"></div>
+    <div class="item" style="top:80px; left:600px;"></div>
+    <div class="item" style="top:400px; left:100px;"></div>
+    <div class="enemy" id="enemy1" style="top:150px; left:400px;"></div>
   </div>
 
   <script src="script.js"></script>
