--- a/index.html
+++ b/index.html
@@ -2,22 +2,45 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Aventura na Floresta</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Aventura na Floresta - Shrek</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>Aventura na Floresta 🌲</h1>
-  <p>Pontuação: <span id="score">0</span></p>
+  <h1>Aventura na Floresta com Shrek 🌲</h1>
+  <p>Pontuação (Princesa Fiona encontrada): <span id="score">0</span></p>
 
   <div id="game-wrapper">
     <div id="game-container">
-      <img id="player" src="https://img.favpng.com/3/14/10/shrek-film-series-princess-fiona-donkey-animated-film-png-favpng-XQPiuLTuiQsbZK0UBzBmSmsQF.jpg" alt="Jogador" />
-      <img class="enemy" id="enemy1" src="https://img1.picmix.com/output/stamp/normal/6/1/5/6/56516_e8713.png" alt="Inimigo" style="top:150px; left:400px;" />
-      <img class="item" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmz9_kMCT1IoflSQfpSiDvzVgfgkjrTEZB6g&s" style="top:100px; left:600px;" />
-      <img class="item" src="https://d1muf25xaso8hp.cloudfront.net/https://img.criativodahora.com.br/2024/04/criativo-660a9fb3c0fa8img-2024-04-01660a9fb3c0fad.jpg?w=1000&h=&auto=compress&dpr=1&fit=max" style="top:700px; left:300px;" />
-      <div class="obstacle" style="top:300px; left:200px;"></div>
-      <div class="obstacle" style="top:800px; left:500px;"></div>
+      <!-- Jogador: Shrek -->
+      <img id="player" src="https://i.imgur.com/I9a87nH.png" alt="Shrek" />
+
+      <!-- Inimigos: Rumpelstiltskin -->
+      <img class="enemy" id="enemy1" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" style="top:150px; left:400px;" />
+      <img class="enemy" id="enemy2" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" style="top:600px; left:900px;" />
+      <img class="enemy" id="enemy3" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" style="top:900px; left:300px;" />
+
+      <!-- Itens: Princesa Fiona -->
+      <img class="item" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" style="top:100px; left:600px;" />
+      <img class="item" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" style="top:700px; left:300px;" />
+      <img class="item" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" style="top:1100px; left:800px;" />
+
+      <!-- Obstáculos: Poça de lama -->
+      <div class="obstacle" style="top:300px; left:200px;">
+        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
+      </div>
+      <div class="obstacle" style="top:800px; left:500px;">
+        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
+      </div>
+      <div class="obstacle" style="top:500px; left:1000px;">
+        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
+      </div>
+      <div class="obstacle" style="top:1000px; left:1200px;">
+        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
+      </div>
+      <div class="obstacle" style="top:750px; left:1400px;">
+        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
+      </div>
     </div>
   </div>
 
