--- a/index.html
+++ b/index.html
@@ -16,31 +16,21 @@
       <img id="player" src="https://i.imgur.com/I9a87nH.png" alt="Shrek" />
 
       <!-- Inimigos: Rumpelstiltskin -->
-      <img class="enemy" id="enemy1" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" style="top:150px; left:400px;" />
-      <img class="enemy" id="enemy2" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" style="top:600px; left:900px;" />
-      <img class="enemy" id="enemy3" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" style="top:900px; left:300px;" />
+      <img class="enemy" id="enemy1" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" />
+      <img class="enemy" id="enemy2" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" />
+      <img class="enemy" id="enemy3" src="https://i.imgur.com/4yG6P2g.png" alt="Rumpelstiltskin" />
 
       <!-- Itens: Princesa Fiona -->
-      <img class="item" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" style="top:100px; left:600px;" />
-      <img class="item" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" style="top:700px; left:300px;" />
-      <img class="item" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" style="top:1100px; left:800px;" />
+      <img class="item" id="item1" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" />
+      <img class="item" id="item2" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" />
+      <img class="item" id="item3" src="https://i.imgur.com/qK8KWxt.png" alt="Princesa Fiona" />
 
       <!-- Obstáculos: Poça de lama -->
-      <div class="obstacle" style="top:300px; left:200px;">
-        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
-      </div>
-      <div class="obstacle" style="top:800px; left:500px;">
-        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
-      </div>
-      <div class="obstacle" style="top:500px; left:1000px;">
-        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
-      </div>
-      <div class="obstacle" style="top:1000px; left:1200px;">
-        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
-      </div>
-      <div class="obstacle" style="top:750px; left:1400px;">
-        <img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" />
-      </div>
+      <div class="obstacle" id="obstacle1"><img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" /></div>
+      <div class="obstacle" id="obstacle2"><img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" /></div>
+      <div class="obstacle" id="obstacle3"><img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" /></div>
+      <div class="obstacle" id="obstacle4"><img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" /></div>
+      <div class="obstacle" id="obstacle5"><img src="https://i.imgur.com/8YGndS7.png" alt="Poça de lama" /></div>
     </div>
   </div>
 
