--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
   <div id="game-wrapper">
     <div id="game-container">
       <!-- Jogador: Shrek -->
-      <img id="player" src="https://i.pinimg.com/736x/4c/ea/e5/4ceae5bde51059c693c82fb562edc4dd.jpg
+      <img id="player" src="imagens/shrek.png"
 
       <!-- Inimigos: Rumpelstiltskin -->
-      <img class="enemy" id="enemy1" src="https://img1.picmix.com/output/stamp/normal/6/1/5/6/56516_e8713.png
-      <img class="enemy" id="enemy2" src="https://img1.picmix.com/output/stamp/normal/6/1/5/6/56516_e8713.png
-      <img class="enemy" id="enemy3" src="https://img1.picmix.com/output/stamp/normal/6/1/5/6/56516_e8713.png
+      <img class="enemy" id="enemy1" src="/imagens/inii.png"
+      <img class="enemy" id="enemy2" src="/imagens/inii.png"
+      <img class="enemy" id="enemy3" src="/imagens/inii.png"
 
       <!-- Itens: Princesa Fiona -->
-      <img class="item" id="item1" src="https://e7.pngegg.com/pngimages/449/179/png-clipart-princess-fiona-illustration-princess-fiona-at-the-movies-cartoons.png
-      <img class="item" id="item2" src="https://e7.pngegg.com/pngimages/449/179/png-clipart-princess-fiona-illustration-princess-fiona-at-the-movies-cartoons.png
-      <img class="item" id="item3" src="https://e7.pngegg.com/pngimages/449/179/png-clipart-princess-fiona-illustration-princess-fiona-at-the-movies-cartoons.png
+      <img class="item" id="item1" src="imagens/fiona.png"
+      <img class="item" id="item2" src="imagens/fiona.png"
+      <img class="item" id="item3" src="imagens/fiona.png"
 
       <!-- Obstáculos: Poça de lama -->
-      <div class="obstacle" id="obstacle1"><img src="https://e7.pngegg.com/pngimages/729/367/png-clipart-puddle-mud-orange-splat-s-brown-splash.png
-      <div class="obstacle" id="obstacle2"><img src="https://e7.pngegg.com/pngimages/729/367/png-clipart-puddle-mud-orange-splat-s-brown-splash.png
-      <div class="obstacle" id="obstacle3"><img src="https://e7.pngegg.com/pngimages/729/367/png-clipart-puddle-mud-orange-splat-s-brown-splash.png
-      <div class="obstacle" id="obstacle4"><img src="https://e7.pngegg.com/pngimages/729/367/png-clipart-puddle-mud-orange-splat-s-brown-splash.png
-      <div class="obstacle" id="obstacle5"><img src="https://e7.pngegg.com/pngimages/729/367/png-clipart-puddle-mud-orange-splat-s-brown-splash.png
+      <div class="obstacle" id="obstacle1"><img src="imagens/poça.png"
+      <div class="obstacle" id="obstacle2"><img src="imagens/poça.png"
+      <div class="obstacle" id="obstacle3"><img src="imagens/poça.png"
+      <div class="obstacle" id="obstacle4"><img src="imagens/poça.png"
+      <div class="obstacle" id="obstacle5"><img src="imagens/poça.png"
     </div>
   </div>
 
