--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
       <img id="player" src="imagens/shrek.png"
 
       <!-- Inimigos: Rumpelstiltskin -->
-      <img class="enemy" id="enemy1" src="/imagens/inii.png"
-      <img class="enemy" id="enemy2" src="/imagens/inii.png"
-      <img class="enemy" id="enemy3" src="/imagens/inii.png"
+      <img class="enemy" id="enemy1" src="imagens/Stiltskin.png"
+      <img class="enemy" id="enemy2" src="imagens/Stiltskin.png"
+      <img class="enemy" id="enemy3" src="imagens/Stiltskin.png"
 
       <!-- Itens: Princesa Fiona -->
       <img class="item" id="item1" src="imagens/fiona.png"
